--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/react-helmet": "^6.1.1",
+    "@types/react-recaptcha": "^2.3.4",
     "@types/react-scroll": "^1.8.2",
     "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
@@ -24,6 +25,7 @@
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sass": "^4.8.0",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-sitemap": "^4.4.0",
@@ -35,6 +37,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-recaptcha": "^2.3.10",
     "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1"
