Changed GitHub Actions workflows

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,65 +1,31 @@
+name: Upload Website
+
 on:
   push:
-    branches: 
-      - master
-
-name: Deploy to Amazon Elastic Beanstalk
+    branches:
+    - master
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Read Dockerrun.aws.json
-      id: read-file
-      uses: juliangruber/read-file-action@v1
+    steps:steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v2
       with:
-        path: './Dockerrun.aws.json'
-
-    - name: Echo Dockerrun.aws.json
+        node-version: '12'
+    - name: Node Package Manager Install
+      run: npm install
+    - name: create env file
       run: |
-        # Providing Dockerrun.aws.json
-        echo "${{ steps.read-file.outputs.content }}"
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+        touch .env
+        echo GATSBY_RECAPTCHA_SITE_KEY =${{ secrets.GATSBY_RECAPTCHA_SITE_KEY }} >> .env
+    - name: Build Static Assets
+      run: npm run build
+    - uses: jakejarvis/s3-sync-action@master
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
+        args: --acl --follow-symlinks --delete
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        # Build a docker container and
-        # push it to ECR
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        
-    - name: Deploy to EB
-      uses: DorianLatchague/beanstalk-deploy@4.0
-      with: 
-        dockerrun_json: ${{ steps.read-file.outputs.content }}
-        ecr_repository: ${{ secrets.ECR_REPOSITORY }}
-        ecr_registry: ${{ steps.login-ecr.outputs.registry }}
-        ecr_image_tag: ${{ github.sha }}
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: ${{ secrets.EB_APPLICATION_NAME }}
-        environment_name: ${{ secrets.EB_ENVIRONMENT_NAME }}
-        version_label: ${{ github.sha }}
-        region: ${{ secrets.AWS_REGION }}
-        wait_for_environment_recovery: 300
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        SOURCE_DIR: 'public'
