--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:steps:
+    steps:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v2
       with:
