--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scroll": "^1.8.2",
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1",
+    "ssr-window": "^4.0.0",
     "use-ssr": "^1.0.24"
   }
 }
