--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ jobs:
     - name: create env file
       run: |
         touch .env
-        echo GATSBY_RECAPTCHA_SITE_KEY =${{ secrets.GATSBY_RECAPTCHA_SITE_KEY }} >> .env
+        echo GATSBY_RECAPTCHA_SITE_KEY=${{ secrets.GATSBY_RECAPTCHA_SITE_KEY }} >> .env
     - name: Build Static Assets
       run: npm run build
     - uses: jakejarvis/s3-sync-action@master
