--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-recaptcha": "^2.3.4",
     "@types/react-scroll": "^1.8.2",
     "@types/react-transition-group": "^4.4.2",
+    "@types/react-typist": "^2.0.2",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "gatsby": "^3.8.1",
@@ -40,7 +41,9 @@
     "react-icons": "^4.2.0",
     "react-recaptcha": "^2.3.10",
     "react-scroll": "^1.8.2",
+    "react-spring": "^9.2.4",
     "react-transition-group": "^4.4.2",
+    "react-typist": "^2.0.5",
     "sass": "^1.35.1",
     "ssr-window": "^4.0.0",
     "use-ssr": "^1.0.24"
