--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/gsap": "^3.0.0",
     "@types/react-helmet": "^6.1.1",
     "@types/react-recaptcha": "^2.3.4",
     "@types/react-scroll": "^1.8.2",
@@ -35,8 +36,10 @@
     "gatsby-transformer-json": "^3.8.0",
     "gatsby-transformer-remark": "^4.5.0",
     "gatsby-transformer-sharp": "^3.8.0",
+    "gsap": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-recaptcha": "^2.3.10",
