manifest + offline plugins, sizes to em, striage only in first component, improved background efficiency by making only top and bottom gradients, playing around with project modals (//edited out) cleaning up styles, logo & favicons in place

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,47 +1,44 @@
 [
     {
-        "imgUrl":"https://via.placeholder.com/150",
+        "img_url":"https://via.placeholder.com/150",
         "name":"Gray" ,
-        "description":"Test description"
+        "description":"Test description",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150",
+        "img_url":"https://via.placeholder.com/150",
         "name":"MightyVet Website" ,
-        "description":"Test description..."
+        "description":"Test description...",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150",
-        "name":"Rize Website V1" ,
-        "description":"Test description..."
+        "img_url":"https://via.placeholder.com/150",
+        "name":"Rize Website" ,
+        "description":"Test description...",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150" ,
+        "img_url":"https://via.placeholder.com/150" ,
         "name":"SW xDesign to Rize Slicer Export Tool" ,
-        "description":"Test description..."
+        "description":"Test description...",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150" ,
+        "img_url":"https://via.placeholder.com/150" ,
         "name":"The Village" ,
-        "description":"Test description..."
+        "description":"Test description...",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150" ,
-        "name":"Rize Website V2" ,
-        "description":"Test description..."
-    },
-    {
-        "imgUrl":"https://via.placeholder.com/150" ,
+        "img_url":"https://via.placeholder.com/150" ,
         "name":"Rize Zone" ,
-        "description":"Test description..."
+        "description":"Test description...",
+        "img_alt": ""
     },
     {
-        "imgUrl":"https://via.placeholder.com/150" ,
+        "img_url":"https://via.placeholder.com/150" ,
         "name":"Various Rize IOT Platforms" ,
-        "description":"Test description..."
-    },
-    {
-        "imgUrl":"https://via.placeholder.com/150" ,
-        "name":"Portfolio" ,
-        "description":"Test description..."
+        "description":"Test description...",
+        "img_alt": ""
     }
 ]
