--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby": "^3.8.1",
     "gatsby-plugin-google-analytics": "^3.8.0",
     "gatsby-plugin-image": "^1.8.0",
-    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
     "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sass": "^4.8.0",
